# windsurf_chat

./: .env.example  .gitignore  Plan.md  README.md  llmchat  pyproject.toml  requirements.txt  run.py  setup.py
cli_llm_chat/: main.py
cli_llm_chat/api/: openrouter.py
cli_llm_chat/config/: settings.py
cli_llm_chat/ui/: formatter.py  terminal.py
cli_llm_chat/utils/: helpers.py
